20 October 2008: Wouter
	- quench a log message that is debug only.
	- iana portlist updated.

17 October 2008: Wouter
	- port Leopard/G5: fixup type conversion size_t/uint32.
	  please ranlib, stop file without symbols warning.
	- harden referral path now also validates the root after priming.
	  It looks up the root NS authoritatively as well as the root servers
	  and attemps to validate the entries.

16 October 2008: Wouter
	- Fixup negative TTL values appearing (reported by Attila Nagy).

15 October 2008: Wouter
	- better documentation for 0x20; remove fallback TODO, it is done.
	- harden-referral-path feature includes A, AAAA queries for glue,
	  as well as very careful NS caching (only when doing NS query).
	  A, AAAA use the delegation from the NS-query.

14 October 2008: Wouter
	- fwd_three.tpkg test was flaky.  If the three requests hit the
	  wrong threads by chance (or bad OS) then the test would fail.
	  Made less flaky by increasing number of retries.
	- stub_udp.tpkg changed to work, give root hints. fixed ldns_dname_abs.
	- ldns tarball is snapshot of ldns r2759 (1.4.0-pre-20081014).
	  Which includes the ldns_dname_absolute fix.
	- fwd_three test remains flaky now that unbound does not stop
	  listening when full.  Thus, removed timeout problem.
	  It may be serviced by three threads, or maybe by one.
	  Mostly only useful for lock-check testing now.

13 October 2008: Wouter
	- fixed recursion servers deployed as authoritative detection, so
	  that as a last resort, a +RD query is sent there to get the 
	  correct answer.
	- iana port list update.
	- ldns tarball is snapshot of ldns r2759 (1.4.0-pre-20081013).

10 October 2008: Wouter
	- fixup tests - the negative cache contained the correct NSEC3s for
	  two tests that are supposed to fail to validate.

9 October 2008: Wouter
	- negative cache caps max iterations of NSEC3 done.
	- NSEC3 negative cache for qtype DS works.

8 October 2008: Wouter
	- NSEC negative cache for DS.
